--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+body{
+    background-color: #F4EEEE;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#main-heading{
+    text-align: center;
+    font-size: 90px;
+    margin-bottom: 30px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-body{
+    display: flex;
+    width: 80%;
+    flex-wrap: wrap;
+    gap : 5px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.loadMore{
+    margin-top: 20px;
+    text-align: center;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 10px;
+    border: 3px solid transparent;
+    background-color: #26577C;
+    color: white;
+    cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.loadMore:hover{
+    background-color: white;
+    border: 3px solid #26577C;
+    color: #26577C;
+    font-weight: bolder;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-div{
+    padding: 20px;
+    text-align: center;
 }
