--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body{
     background-color: #F4EEEE;
 }
 #main-heading{
+    margin-top: 40px;
     text-align: center;
     font-size: 90px;
     margin-bottom: 30px;
