--- a/src/styles/PokemonCard.css
+++ b/src/styles/PokemonCard.css
@@ -61,7 +61,7 @@
     background-color: #279EFF !important;
 }
 .normal{
-    background-color: #FFF3DA !important;
+    background-color: #CECE5A !important;
 }
 .bug{
     background-color: #6C3428 !important;
@@ -80,32 +80,69 @@
 }
 .modal,.overlay{
     width: 100%;
-    height: 100%;
-    top: 0;
+    height: 343px;
+    top: 30%;
     left:0;
     right: 0;
     bottom: 0;
     position: fixed;
+    
 }
 .overlay{
     background: rgba(49,49,49,0.8);
 }
 .modal-content{
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     line-height: 1.4;
-    background-color: #f1f1f1;
-    padding: 14px 28px;
     border-radius: 3px;
-    max-width: 600px;
-    min-width: 300px;
+    width: 800px;
+    height: 100%;
+    border: 5px solid black;
 }
 .close-modal{
     position: absolute;
     top:10px;
-    right: 10px;
-    padding: 5px 7px;
-
+    right: 30px;
+    padding: 5px 10px;
+    font-size: 18px;
+    border-radius: 10px;
+    border: 3px solid black;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    font-weight: bold;
+}
+.pokemon-body-div{
+    display: flex;
+    flex-direction: row;
+   
+}
+.clas1{
+    margin: auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+   
+}
+.clas2{
+    font-size: 18px;
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.pokemon-img-modal{
+    width: 200px;
+    height: 250px;
+    margin-bottom: 10px;
+}
+#detailst{
+    margin-bottom: 10px;
 }
